<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.topup.confirminfo.ConfirmInfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">


        <View
            android:id="@+id/vCenterVertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerVertical="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_above="@id/vCenterVertical"
            android:src="@drawable/payoo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vCenterVertical"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingEnd="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/confirm_receiver_phone"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvConfirmReceiverPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/confirm_amount"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvConfirmAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/confirm_payment_method"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvConfirmPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvTransferResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>